# vertex-pipelines-end-to-end-samples

./: .flake8  .gitignore  Makefile  README.md  env.sh.example
docs/: PIPELINE.md  (+8 more)
model/: Dockerfile  pyproject.toml
model/training/: train.py
model/tuning/: tune.py
pipeline_components/: pyproject.toml
pipeline_components/pipeline_components/aiplatform/: container_image_uri.py  export_model.py  get_current_time.py  lookup_model.py  upload_model.py
pipeline_components/pipeline_components/bigquery/: __init__.py  extract_dataset.py  query_to_table.py  requirements.txt  upload_prediction.py
pipeline_components/pipeline_components/evaluation/: Dockerfile  compare_models.py  evaluation_metrics_tfma.py  requirements.txt
pipeline_components/pipeline_components/helpers/: copy_artifact.py  get_model_uri.py  quote_csv_header.py
pipeline_components/pipeline_components/tensorflow/: __init__.py  predict.py  requirements.txt  train.py
pipeline_components/pipeline_components/tfdv/: generate_statistics.py  requirements.txt  show_anomalies.py  validate_schema.py  validate_skew.py  visualise_statistics.py
pipeline_components/pipeline_components/xgboost/: __init__.py  predict.py  requirements.txt  train.py
pipeline_components/tests/: test_pipeline_components.py
pipelines/: pyproject.toml
pipelines/kfp_components/: notebook_component.py  papermill.py
pipelines/kfp_components/aiplatform/: get_current_time.py
pipelines/kfp_components/bigquery/: query_to_table.py
pipelines/kfp_components/tfdv/: generate_statistics.py
pipelines/pipelines/: generate_query.py
pipelines/pipelines/tensorflow/prediction/: pipeline.py
pipelines/pipelines/tensorflow/training/: pipeline.py
pipelines/pipelines/xgboost/prediction/: pipeline.py
pipelines/pipelines/xgboost/training/: pipeline.py
pipelines/src/pipelines/: __main__.py  config.py  prediction.py  prediction.yaml  training.py  training.yaml  utils.py
pipelines/src/pipelines/configs/: __init__.py
pipelines/src/pipelines/pipelines/: predict.py  train.py
pipelines/src/pipelines/tensorflow/prediction/: pipeline.py
pipelines/src/pipelines/tensorflow/training/: pipeline.py
pipelines/src/pipelines/training/: pipeline.py
pipelines/src/pipelines/training/queries/: preprocessing.sql
pipelines/src/pipelines/trigger/: main.py
pipelines/src/pipelines/tuning/: pipeline.py
pipelines/src/pipelines/xgboost/prediction/: pipeline.py
pipelines/tests/: test_pipelines.py
pipelines/tests/e2e/: test_e2e.py  test_pipelines.py  utils.py
pipelines/xgboost/training/: pipeline.py
pipelines/xgboost/training/payloads/: dev.json
(+33 files in other folders)
