[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.5.0"
xgboost = "^2.0.3"
pandas = "^2.2.2"

[tool.poetry.group.prediction.dependencies]
fastapi = {extras = ["uvicorn"], version = "^0.100.0"}
uvicorn = "^0.30.1"
google-cloud-storage = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
