[tool.poetry]
name = "pipeline_components"
version = "0.1.0"
description = ""
authors = ["Jonny Browning <jonathan.browning@datatonic.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kfp = "^1.8.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
