[tool.poetry]
name = "pipelines"
version = "0.1.0"
authors = ["Example User <user@example.com>"]
description = "Vertex AI Pipelines end-to-end sample"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "pipelines", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Jinja2 = ">=3.0.1,<4.0.0"
google-cloud-aiplatform = ">=1.54.1"
google-cloud-storage = "<2.17.0"
google-cloud-pipeline-components = "^2.14.1"
components = { path = "../components", develop = true }
kfp = "^2.7.0"
pyyaml = "6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<8.2.2"
pre-commit = ">=2.14.1,<3.7.1"
coverage = "==7.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
per-file-ignores = [
    "E203",
    "F841"
]
ignore = [
    "E203",
    "F841",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = "tests"
junit_family = "xunit2"
